projects/elevate/portal-react-elevate/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elevate-portal-react
  namespace: elevate-dev
  labels:
    app: elevate-portal-react
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - elevate-portal-dev.coherent.in
      secretName: elevate-portal-react-tls
  rules:
    - host: "elevate-portal-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elevate-portal-react-svc
                port:
                  number: 80
